# MinGW-ld64

./: README.md
mingw-w64-crt/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
mingw-w64-crt/cfguard/: mingw_cfguard_loadcfg.S  mingw_cfguard_support.c
mingw-w64-crt/complex/: complex_internal.h  norm.c  norm.def.h  normf.c  norml.c
mingw-w64-crt/crt/: CRT_fp10.c  CRT_fp8.c  charmax.c  cinitexe.c  crt_handler.c  crtdll.c  crtexe.c  exit_wrappers.c  natstart.c  pseudo-reloc.c  tls_atexit.c  tlssup.c  tlsthrd.c  ucrt_exit_wrappers.c  ucrtbase_compat.c
mingw-w64-crt/def-include/: crt-aliases.def.in  func.def.in
mingw-w64-crt/gdtoa/: strtodnrp.c  strtof.c  strtopx.c
mingw-w64-crt/include/: internal.h  sect_attribs.h
mingw-w64-crt/intrincs/: RtlSecureZeroMemory.c  ilockand64.c  ilockor64.c  ilockxor64.c  mul128ex.c  rdtsc.c  umul128ex.c
mingw-w64-crt/lib-common/: advapi32.def.in  api-ms-win-base-bootconfig-l1-1-0.def  api-ms-win-base-util-l1-1-0.def  api-ms-win-core-apiquery-l2-1-0.def  api-ms-win-core-com-midlproxystub-l1-1-0.def  api-ms-win-core-com-private-l1-1-0.def  api-ms-win-core-console-l1-2-2.def  api-ms-win-core-featuretoggles-l1-1-0.def  api-ms-win-core-fibers-l1-1-2.def  api-ms-win-core-file-l1-1-0.def  api-ms-win-core-file-l1-2-2.def  api-ms-win-core-file-l1-2-4.def  api-ms-win-core-file-l2-1-4.def  api-ms-win-core-ioring-l1-1-0.def  api-ms-win-core-ioring-l1-1-1.def  api-ms-win-core-ioring-l1-1-2.def  api-ms-win-core-kernel32-legacy-l1-1-0.def  api-ms-win-core-libraryloader-l1-2-3.def  api-ms-win-core-marshal-l1-1-0.def  api-ms-win-core-memory-l1-1-1.def  api-ms-win-core-memory-l1-1-8.def  api-ms-win-core-memory-l1-1-9.def  api-ms-win-core-processthreads-l1-1-4.def  api-ms-win-core-processthreads-l1-1-5.def  api-ms-win-core-processthreads-l1-1-6.def  api-ms-win-core-processthreads-l1-1-7.def  api-ms-win-core-processthreads-l1-1-8.def  api-ms-win-core-rtlsupport-l1-1-0.def  api-ms-win-core-rtlsupport-l1-2-2.def  api-ms-win-core-shlwapi-legacy-l1-1-0.def  api-ms-win-core-shutdown-ansi-l1-1-0.def  api-ms-win-core-shutdown-l1-1-0.def  api-ms-win-core-sysinfo-l1-2-7.def  api-ms-win-core-sysinfo-l2-1-0.def  api-ms-win-core-systemtopology-l1-1-2.def  api-ms-win-core-threadpool-legacy-l1-1-0.def  api-ms-win-core-wow64-l1-1-0.def  api-ms-win-core-xstate-l2-1-2.def  api-ms-win-crt-conio-l1-1-0.def  api-ms-win-crt-convert-l1-1-0.def.in  (+95 more)
mingw-w64-crt/lib64/: Makefile.am  aclui.def  adsldpc.def  apphelp.def  atmlib.def  batmeter.def  catsrv.def  catsrvut.def  certcli.def  cimwin32.def  clfsw32.def  cmcfg32.def  cmdial32.def  cmpbk32.def  cmutil.def  comsvcs.def  cscdll.def  cscui.def  csrsrv.def  d3d8thk.def  d3dx10_43.def  d3dx11_43.def  d3dx9_43.def  dciman32.def  dmdskmgr.def  dpapi.def  es.def  fastprox.def  faultrep.def  framedyn.def  fxsapi.def  fxsroute.def  fxsst.def  fxst30.def  fxstiff.def  glmf32.def  gptext.def  hal.def  hnetcfg.def  httpapi.def  (+104 more)
mingw-w64-crt/libarm64/: Makefile.am
mingw-w64-crt/libsrc/: dinput_private.h  dmoguids.c  dxguid.c  dxva-uuid.c  ksuser.c  strmiids.c
mingw-w64-crt/math/: cbrtl.c  cephes_mconf.h  coshl.c  erfl.c  fabsf.c  fabsl.c  fdiml.c  fmal.c  fmaxl.c  fminl.c  fp_consts.c  fp_consts.h  fp_constsf.c  fp_constsl.c  fpclassify.c  fpclassifyf.c  fpclassifyl.c  frexpf.c  frexpl.c  hypotl.c  isnan.c  isnanf.c  isnanl.c  ldexpf.c  lgamma.c  lgammaf.c  lgammal.c  llrintl.c  llroundl.c  lrintl.c  lroundl.c  modfl.c  nextafterl.c  nexttoward.c  nexttowardf.c  rintl.c  roundl.c  signbit.c  signbitf.c  signbitl.c  (+6 more)
mingw-w64-crt/misc/: __C_specific_handler.c  _onexit.c  a64l.c  arc4random.c  arc4random_buf.c  arc4random_uniform.c  clearenv.c  delayimp.c  dllentrypoint.c  dllmain.c  feclearexcept.c  fegetenv.c  fegetexceptflag.c  fegetround.c  feholdexcept.c  feraiseexcept.c  fesetenv.c  fesetexceptflag.c  fesetround.c  fetestexcept.c  feupdateenv.c  ftruncate.c  ftw.c  getentropy.c  getopt.c  insque.c  l64a.c  longjmp.S  mempcpy.c  mingw_getsp.S  mingw_longjmp.S  mingw_wcstold.c  mkdtemp.c  mkstemp.c  mkstemps.c  output_format.c  qsort_r.c  reallocarray.c  realpath.c  setenv.c  (+16 more)
mingw-w64-crt/profile/: gmon.c  mcountFunc.S  profil.c
mingw-w64-crt/ssp/: chk_fail.c  gets_chk.c  memcpy_chk.c  memmove_chk.c  mempcpy_chk.c  memset_chk.c  stack_chk_fail.c  stpcpy_chk.c  strcat_chk.c  strcpy_chk.c  strncat_chk.c  strncpy_chk.c
mingw-w64-crt/stdio/: asprintf.c  mingw_asprintf.c  mingw_pformat.c  mingw_pformat.h  mingw_vasprintf.c  mingw_vfscanf.c  mingw_wvfscanf.c  truncate.c  ucrt__scprintf.c  ucrt__snprintf.c  ucrt__snscanf.c  ucrt__snwprintf.c  ucrt__vscprintf.c  ucrt__vsnprintf.c  ucrt__vsnwprintf.c  ucrt_fprintf.c  ucrt_fscanf.c  ucrt_fwprintf.c  ucrt_fwscanf.c  ucrt_ms_fwprintf.c  ucrt_printf.c  ucrt_scanf.c  ucrt_snprintf.c  ucrt_snwprintf.c  ucrt_sprintf.c  ucrt_sscanf.c  ucrt_swprintf.c  ucrt_swscanf.c  ucrt_vfprintf.c  ucrt_vfscanf.c  ucrt_vfwprintf.c  ucrt_vfwscanf.c  ucrt_vprintf.c  ucrt_vscanf.c  ucrt_vsnprintf.c  ucrt_vsnwprintf.c  ucrt_vsprintf.c  ucrt_vsscanf.c  ucrt_vswprintf.c  ucrt_vswscanf.c  (+5 more)
mingw-w64-crt/string/: bcopy.c  bzero.c  explicit_bzero.c  ffs.c  ffsll.c  memchr.c  memmem.c  memrchr.c  memset_explicit.c  memset_s.c  stpcpy.c  stpncpy.c  strcasestr.c  strchr.c  strchrnul.c  strerror_r.c  strlcat.c  strlcpy.c  strndup.c  strrchr.c  strsep.c  strverscmp.c  ucrt__wcstok.c  xsi_strerror_r.c
mingw-w64-crt/testcases/: t_ansi_io.c  t_expm1.c  t_float.c  t_stprintf_tmpl.h  t_tls1.c  t_try1.C
mingw-w64-crt/time/: asctime_r.c  clock.c  ctime_r.c  gmtime_r.c  localtime_r.c  nanosleep.c  timespec_getres.c
mingw-w64-doc/: OneCoreUAP_apiset_exports.csv  OneCore_apiset_exports.csv
mingw-w64-headers/: Makefile.am  Makefile.in  configure  configure.ac
mingw-w64-headers/crt/: _bsd_types.h  _cygwin.h  _mingw.h  _mingw_features.h  _mingw_mac.h  _mingw_off_t.h  _mingw_stdarg.h  _mingw_unicode.h  _timeval.h  assert.h  complex.h  conio.h  corecrt.h  corecrt_search.h  corecrt_startup.h  corecrt_stdio_config.h  corecrt_wconio.h  corecrt_wctype.h  corecrt_wdirect.h  corecrt_wio.h  corecrt_wstdio.h  (+60 more)
(+515 files in other folders)
